bmi result screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  percent_indicator: ^4.2.2
   syncfusion_flutter_core: ^20.1.61
   syncfusion_flutter_sliders: ^20.1.61
 
